--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ $RECYCLE.BIN/
 /sloppy.exe.lnk
 /.vs/DesktopShell/DesignTimeBuild/.dtbcache
 /.vs/DesktopShell/v15/Server/sqlite3/db.lock
+/DesktopShell.png
