--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ $RECYCLE.BIN/
 /.vs/DesktopShell/DesignTimeBuild/.dtbcache
 /.vs/DesktopShell/v15/Server/sqlite3/db.lock
 /DesktopShell.png
+__Release
