--- a/DesktopShell/Properties/Settings.settings
+++ b/DesktopShell/Properties/Settings.settings
@@ -1,9 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DesktopShell.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="Stuff" Type="System.Drawing.Point" Scope="User">
-      <Value Profile="(Default)">2705, 139</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
