--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -25,12 +25,12 @@ jobs:
       run: dotnet build --no-restore --configuration Release
     
     - name: Run tests with coverage
-      run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+      run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
     
     - name: Generate Coverage Report
       uses: danielpalme/ReportGenerator-GitHub-Action@5.3.10
       with:
-        reports: 'coverage/**/coverage.cobertura.xml'
+        reports: 'TestResults/**/coverage.cobertura.xml'
         targetdir: 'coveragereport'
         reporttypes: 'Html;MarkdownSummaryGithub'
         sourcedirs: '.'
