Add environment setup docs and update project files

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -10,6 +10,9 @@ jobs:
   build-and-test:
     runs-on: windows-latest
     
+    env:
+      DESKTOPSHELL_PASSPHRASE: ${{ secrets.DESKTOPSHELL_PASSPHRASE }}
+    
     steps:
     - uses: actions/checkout@v4
     
