CI: checkout submodules via SUBMODULE_PAT

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        submodules: false
+        submodules: recursive
+        token: ${{ secrets.SUBMODULE_PAT }}
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
