CI: manually init submodules with SUBMODULE_PAT

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -16,8 +16,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        submodules: recursive
-        token: ${{ secrets.SUBMODULE_PAT }}
+        submodules: false
+
+    - name: Fail if SUBMODULE_PAT missing (push)
+      if: ${{ github.event_name == 'push' && secrets.SUBMODULE_PAT == '' }}
+      shell: pwsh
+      run: |
+        Write-Error "SUBMODULE_PAT secret is not set. Configure it in repo settings (Actions secrets) with a PAT that can read the submodule repo: https://github.com/dlamanna/DesktopShellSuiteAutoUpdate.git"
+
+    - name: Checkout submodules (requires SUBMODULE_PAT)
+      if: ${{ secrets.SUBMODULE_PAT != '' }}
+      shell: pwsh
+      env:
+        SUBMODULE_PAT: ${{ secrets.SUBMODULE_PAT }}
+      run: |
+        $ErrorActionPreference = 'Stop'
+        git config --global url."https://x-access-token:$env:SUBMODULE_PAT@github.com/".insteadOf "https://github.com/"
+        git submodule sync --recursive
+        git submodule update --init --recursive
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
